--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>u46</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="images/favicon.png">
 
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/index.css">
-    
-  </head>  
-  <body>
-    <h1>u46</h1>
+<head>
+  <title>u46</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="images/favicon.png">
 
-    <div id="phaser-container"></div>
+  <!-- import the webpage's stylesheet -->
+  <link rel="stylesheet" href="/index.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.min.js" integrity="sha256-opIOArWpfmA6kZLZN7Jj7tSbFeIdvafkfZsI8p17OTc=" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
-    
-    <p>
-      This site is hosted by Glitch. Check out the code by clicking the fish in the top right.
-    </p>
+  <!-- Show an error not just in the console when there is a JS issue -->
+  <script>
+    window.onerror = function (msg, url, linenumber) {
+      // Tell users when errors occur and log on google analytics
+      // http://stackoverflow.com/questions/2604976/javascript-how-to-display-script-errors-in-a-popup-alert/2604997#2604997
+      var errMessage = msg + '\nURL: ' + url + '\nLine Number: ' + linenumber;
+      const errorElem = document.createElement('div');
+      errorElem.style = 'color: rgb(255, 0, 0); position: fixed; background: #000; width: 100%; height: 2em; padding: 1em;';
+      errorElem.prepend(msg);
+      document.body.prepend(errorElem);
+      // `return false` makes sure we report on dev console too
+      return false;
+    }
+  </script>
 
-    <!-- include the Glitch button to show what the webpage is about and
+
+</head>
+
+<body>
+  <h1>u46</h1>
+
+  <div id="phaser-container"></div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.min.js"
+    integrity="sha256-opIOArWpfmA6kZLZN7Jj7tSbFeIdvafkfZsI8p17OTc=" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
+
+  <p>
+    This site is hosted by Glitch. Check out the code by clicking the fish in the top right.
+  </p>
+
+  <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-    <script src="https://button.glitch.me/button.js"></script>
-  </body>
+  <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+  <script src="https://button.glitch.me/button.js"></script>
+</body>
+
 </html>
