Virtual buttons for tablet play Because the kids keep asking to play the game and they only have a tablet

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 <body>
   <h1>u46</h1>
 
+  <button onclick="window.location.reload(true)">refresh</button>
+
   <div id="phaser-container"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.min.js"
     integrity="sha256-opIOArWpfmA6kZLZN7Jj7tSbFeIdvafkfZsI8p17OTc=" crossorigin="anonymous"></script>
-  <script src="index.js"></script>
+  <script src="index.js?cache-1"></script>
 
   <p>
     This site is hosted by Glitch. Check out the code by clicking the fish in the top right.
