--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
       errorElem.style = 'color: rgb(255, 0, 0); position: fixed; background: #000; width: 100%; height: 2em; padding: 1em;';
       errorElem.prepend(errMessage);
       document.body.prepend(errorElem);
+      console.log(msg);
       // `return false` makes sure we report on dev console too
       return false;
     }
   </script>
 
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.js"
+    integrity="sha256-lAKgN7FR52dIa+v0dhBzNypk7JrcrBcOQzVP79iMFPQ=" crossorigin="anonymous"></script> -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.min.js"
+    integrity="sha256-opIOArWpfmA6kZLZN7Jj7tSbFeIdvafkfZsI8p17OTc=" crossorigin="anonymous"></script>
 
 </head>
 
@@ -40,8 +46,7 @@
 
   <div id="phaser-container"></div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.min.js"
-    integrity="sha256-opIOArWpfmA6kZLZN7Jj7tSbFeIdvafkfZsI8p17OTc=" crossorigin="anonymous"></script>
+
   <script src="index.js?cache-1xaz"></script>
 
   <p>
@@ -50,8 +55,8 @@
 
   <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
-  <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-  <script src="https://button.glitch.me/button.js"></script>
+  <!-- <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+  <script src="https://button.glitch.me/button.js"></script> -->
 </body>
 
 </html>
