Removed glitch fish note

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 
   <script src="index.js?cache-1xaz"></script>
 
-  <p>
+  <!-- <p>
+    For some reason the glitch fish was causing slow-downs today, so I had to remove it.
     This site is hosted by Glitch. Check out the code by clicking the fish in the top right.
-  </p>
+  </p> -->
 
   <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
