--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.22.0/phaser.min.js"
     integrity="sha256-opIOArWpfmA6kZLZN7Jj7tSbFeIdvafkfZsI8p17OTc=" crossorigin="anonymous"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EPS5P7RHKV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-EPS5P7RHKV');
+  </script>
 </head>
 
 <body>
