Updated title in some spots to "Egg Rocket Unicorn"

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
-  <title>u46</title>
+  <title>Egg Rocket Unicorn</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="An egg fell from a tree. The egg is in danger. Only Robot can keep it alive.">
+
   <link rel="icon" href="images/favicon.png">
 
   <!-- import the webpage's stylesheet -->
@@ -45,7 +47,7 @@
 </head>
 
 <body>
-  <h1>u46</h1>
+  <h1>Egg Rocket Unicorn</h1>
 
   <div class="tinker-buttons">
     <button onclick="toggleFullScreen(document.getElementById('phaser-container'))">fullscreen</button>
@@ -67,6 +69,10 @@
           to make it easier for folks to view source and remix -->
   <!-- <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
   <script src="https://button.glitch.me/button.js"></script> -->
+
+  <footer>
+    <a href="https://ldjam.com/events/ludum-dare/46/$193298">Ludum Dare 46</a>
+  </footer>
 </body>
 
 </html>
