Fixed broken CSS link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="images/favicon.png">
 
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="index.css">
 
   <!-- Show an error not just in the console when there is a JS issue -->
   <script>
