Fixed missing unicorn walk crash

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div id="phaser-container"></div>
 
 
-  <script src="index.js?cache-1xaz"></script>
+  <script src="index.js?cache-1xazx1"></script>
 
   <!-- <p>
     For some reason the glitch fish was causing slow-downs today, so I had to remove it.
