Fixed virtual keys becoming invisible Fixed rainbow eating level having no rainbows

--- a/index.html
+++ b/index.html
@@ -57,18 +57,8 @@
 
   <div id="phaser-container"></div>
 
-
-  <script src="index.js?cache-1xazx1"></script>
-
-  <!-- <p>
-    For some reason the glitch fish was causing slow-downs today, so I had to remove it.
-    This site is hosted by Glitch. Check out the code by clicking the fish in the top right.
-  </p> -->
-
-  <!-- include the Glitch button to show what the webpage is about and
-          to make it easier for folks to view source and remix -->
-  <!-- <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-  <script src="https://button.glitch.me/button.js"></script> -->
+  <!-- The game code -->
+  <script src="index.js?cache-1xazx121"></script>
 
   <footer>
     <a href="https://ldjam.com/events/ludum-dare/46/$193298">Ludum Dare 46</a>
