--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="An egg fell from a tree. The egg is in danger. Only Robot can keep it alive.">
+  <meta name="description" content="An egg fell from a tree. The egg is in danger. Only Rocket can keep it alive.">
 
   <link rel="icon" href="images/favicon.png">
 
