Updating readme notes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <script src="index.js?cache-1xazx121"></script>
 
   <footer>
-    <a href="https://ldjam.com/events/ludum-dare/46/$193298">Made for Ludum Dare 46</a>
+    <a href="https://ldjam.com/events/ludum-dare/46/egg-rocket-unicorn">Made for Ludum Dare 46</a>
     <a href="https://github.com/ubershmekel/egg-rocket-unicorn">Source on GitHub</a>
   </footer>
 </body>
