Fixed broken mute button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="tinker-buttons">
     <button onclick="toggleFullScreen(document.getElementById('phaser-container'))">fullscreen</button>
-    <button onclick="game.sound.mute = !game.sound.mute">mute</button>
+    <button onclick="_game.sound.mute = !_game.sound.mute">mute</button>
     <button onclick="window.location.reload(true)">refresh</button>
   </div>
 
