Making tweets of this game have an image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="An egg fell from a tree. The egg is in danger. Only Rocket can keep it alive.">
+  <meta name="description" content="An egg is falling. Only Rocket can keep it alive.">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@ubershmekel">
+  <meta name="twitter:creator" content="@ubershmekel">
+  <meta name="twitter:title" content="Egg Rocket Unicorn">
+  <meta name="twitter:description" content="An egg is falling. Only Rocket can keep it alive.">
+  <meta name="twitter:image" content="images/egg-rocket-unicorn-twitter-card.png">
+  
 
   <link rel="icon" href="images/favicon.png">
 
