I guess the twitter image needs to be a full url

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="twitter:creator" content="@ubershmekel">
   <meta name="twitter:title" content="Egg Rocket Unicorn">
   <meta name="twitter:description" content="An egg is falling. Only Rocket can keep it alive.">
-  <meta name="twitter:image" content="images/egg-rocket-unicorn-twitter-card.png">
+  <meta name="twitter:image" content="https://ubershmekel.github.io/egg-rocket-unicorn/images/egg-rocket-unicorn-twitter-card.png">
   
 
   <link rel="icon" href="images/favicon.png">
